# CPSC-501-A4

./: CMakeLists.txt  Convolve.cpp  Convolve.h  FastFourier.cpp  FastFourier.h  TestConvolve.cpp  TestConvolve.h  TimeDomain.cpp  TimeDomain.h  WavReader.cpp  WavReader.h  timing.txt
